yaml/rv/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rv
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: rv
    spec:
      containers:
      - name: rv
        image: atgracey/fido-sample:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /app/hibernate.cfg.xml
          name: config
          subPath: hibernate.cfg.xml
        - mountPath: /app/service.yml
          name: config
          subPath: service.yml
        - mountPath: /app/WEB-INF/web.xml
          name: config
          subPath: web.xml
      volumes:
      - name: config
        configMap:
          name: rv-config
          defaultMode: 0666
          items:
          - key: hibernate.cfg.xml
            path: hibernate.cfg.xml
          - key: service.yml
            path: service.yml
          - key: web.xml
            path: web.xml
