yaml/rv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rv
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8084
    protocol: TCP
    targetPort: 8080
  selector:
    app: rv
