yaml/rv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rv
spec:
  tls:
  - hosts:
    - rv.fido.gracey.dev
    secretName: rv-tls
  rules:
  - host: rv.fido.gracey.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rv
            port:
              number: 8080
